add homepage with link to repo

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@mokd/parz",
   "version": "0.0.2",
   "description": "A simple utility for parsing and validation of values.",
+  "homepage": "https://github.com/mokd/parz",
   "main": "parz.ts",
   "scripts": {
     "test:watch": "jest --watch",
