--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.3",
   "description": "A simple utility for parsing and validation of values.",
   "homepage": "https://github.com/mokd/parz",
-  "main": "parz.ts",
+  "main": "parz.js",
   "scripts": {
     "test:watch": "jest --watch",
-    "test": "jest"
+    "test": "jest",
+    "publish": "tsc && npm publish"
   },
   "author": "mokd",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.1.2",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
